--- a/public/index.html
+++ b/public/index.html
@@ -18,18 +18,18 @@
       <ul><li>When I visit that shortened URL, it will redirect me to my original link.</ul>
     </blockquote>
     <h3>Example creation usage:</h3>
-    <code>https://shurli.herokuapp.com/new/https://www.google.com</code>
+    <code>https://little-url.herokuapp.com/https://www.google.com</code>
     <br>
-    <code>https://shurli.herokuapp.com/new/http://freecodecamp.com/news</code>
+    <code>https://little-url.herokuapp.com/http://freecodecamp.com/news</code>
     <h3>Example creation output:</h3>
     <code>
       {
         "original_url": "http://freecodecamp.com/news",
-        "short_url": "https://shurli.herokuapp.com/4"
+        "short_url": "https://little-url.herokuapp.com/4"
       }
     </code>
     <h3>Usage:</h3>
-    <code>https://shurli.herokuapp.com/4</code>
+    <code>https://little-url.herokuapp.com//4</code>
     <h3>Will redirect to:</h3>
     <code>http://freecodecamp.com/news</code>
   </div>
