--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       }
     </code>
     <h3>Usage:</h3>
-    <code>https://little-url.herokuapp.com//4</code>
+    <code>https://little-url.herokuapp.com/4</code>
     <h3>Will redirect to:</h3>
     <code>http://freecodecamp.com/news</code>
   </div>
