Added proper way to index

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,9 @@ Remove this if you use the .htaccess -->
       <ul><li>When I visit that shortened URL, it will redirect me to my original link.</ul>
     </blockquote>
     <h3>Example creation usage:</h3>
-    <code>https://little-url.herokuapp.com/https://www.google.com</code>
+    <code>https://little-url.herokuapp.com/new/https://www.google.com</code>
     <br>
-    <code>https://little-url.herokuapp.com/http://freecodecamp.com/news</code>
+    <code>https://little-url.herokuapp.com/new/http://freecodecamp.com/news</code>
     <h3>Example creation output:</h3>
     <code>
       {
